# VehicleROS

./: CMakeLists.txt  package.xml
include/my_vehicle/: vehicle_node.hpp
msg/: GpsState.msg  Hydraulics.msg  PositionPoint.msg  PositionState.msg  RoutePoint.msg  VehicleConfiguration.msg  VehicleState.msg
src/: main.cpp  vehicle_node.cpp
srv/: GetBatteryState.srv  GetPosition.srv  SetVehicleId.srv
